2007-03-02 Peter Parente  <parente@cs.unc.edu>

	* po/ChangeLog: Renamed from incorrect Changelog
	* accerciser.spec.in: Added more requirements and fixed description
	
	* accerciser.desktop.in: Enabled startup notify 
	* configure.in: Added --without-pyreqs flag as a way to avoid checking
	for Python modules at build time, moved intltool check after gettext 
	(seems more robust?), fixed bug #425497
	* Makefile.am: reordered subdirs
	* accerciser.spec.in: Added locals and --without-pyreqs flag
	
	* Makefile.am: Added po/
	* po/LINGUAS: Added per http://live.gnome.org/GnomeGoals/PoLinguas
	* configure.in: Changed next version number to 0.1.1 to sync with GNOME
	releases, removed ALL_LINGUAS line, added check for intltool 0.35.0

2007-03-30 Peter Parente  <parente@cs.unc.edu>

	* po/POTFILES.in: Added all translatable files

2007-03-28  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Expander labels show if a given
	interface is implemented or not (bug 423749).
	
2007-03-28  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyLinAcc.zip: Repackaged from upstream.
	
2007-03-27  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/__init__.py: Added me as author.
	* src/lib/accerciser/script_playback.py: A wait loop for getting
	application focus. This is neccessary if the application takes
	time to start up.
	* src/lib/accerciser/hotkey_manager.py:	Added file header.
	
2007-03-27  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: 
	* src/lib/accerciser/hotkey_manager.py: Use key code instead of
	textual representation.

2007-03-27  Eitan Isaacson  <eitan@ascender.com>

	* src/accerciser.glade: Set correct paned positions. Added missing
	callbacks to main window.
	* src/lib/accerciser/accerciser.py: Save and restore paned positions.
	* src/lib/accerciser/plugin_manager.py: refactor PluginManager.

2007-03-23  Eitan Isaacson  <eitan@ascender.com>
