@@ -1,4 +1,10 @@
-2007-03-02 Peter Parente  <parente@cs.unc.edu>
+2007-04-03 Eitan Isaacson  <eitan@ascender.com>
+	
+	* src/lib/accerciser/plugin_manager.py: Started adding context
+	menu support instead of the inaccessible treeview combo boxes in
+	the plugin preferences dialog.
+	
+2007-04-02 Peter Parente  <parente@cs.unc.edu>
 
 	* po/ChangeLog: Renamed from incorrect Changelog
 	* accerciser.spec.in: Added more requirements and fixed description
@@ -23,7 +29,7 @@
 
 	* plugins/interface_view.py: Expander labels show if a given
 	interface is implemented or not (bug 423749).
-	
+
 2007-03-28  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/pyLinAcc.zip: Repackaged from upstream.
